# quake3-log-parser

./: .gitignore  Dockerfile  README.md  TESTING.MD  entrypoint.sh  pyproject.toml
src/: main.py
src/dclasses/: __init__.py  quake_log.py
src/enums/: __init__.py  enums.py
src/parser/: __init__.py  base_parser.py  log_parser.py
tests/: conftest.py  test_entrypoint.py  test_file_opened.py  test_games_grouped.py  test_kill_counts.py  test_log_file.py  test_log_parser.py  test_player_count.py
